--- a/react-front/package.json
+++ b/react-front/package.json
@@ -10,9 +10,13 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.3.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.0",
+    "recharts": "^2.10.3",
+    "styled-components": "^6.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
